--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <div class="form-group help">
                     <select name="ta" id="ta" class="selectpicker form-control">
-                        <option value="1" class="option-selected">Пасcажирская</option>
-                        <option value="2" class="option-selected">Грузоперевозка</option>
+                        <option value="1" class="option-selected">Пасcажирская (20р)</option>
+                        <option value="2" class="option-selected">Грузоперевозка (40р)</option>
                     </select>
                 </div>
                 <div class="form-group help">
@@ -41,7 +41,7 @@
                     </select>
                 </div>
                 <div class="form-group help">
-                    <button type="submit" class="btn btn-default">Отправить</button>
+                    <button type="submit" class="btn btn-default">Заказать</button>
                 </div>
             </form>
         </div>
