--- a/app/templates/manage/create_report.html
+++ b/app/templates/manage/create_report.html
@@ -1,18 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-md-offset-3 col-md-6">
-    <form class="form-horizontal" method="POST" action="">
-        <h3>Собрать отчёт</h3>
-        <div class="form-group help">
-            <input type="date" name="date_from" class="form-control">
+<div class="container">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6">
+            <form class="form-horizontal" method="POST" action="">
+                <span class="heading">СОБРАТЬ ОТЧЕТ</span>
+                <div class="form-group help">
+                    <input type="date" name="date_from" class="form-control" max="{{ today }}">
+                </div>
+                <div class="form-group help">
+                    <input type="date" name="date_to" class="form-control" max="{{ today }}">
+                </div>
+                <div class="form-group help">
+                    <button type="submit" class="btn btn-default">Собрать</button>
+                </div>
+            </form>
         </div>
-        <div class="form-group help">
-            <input type="date" name="date_to" class="form-control" max="{{ today }}">
-        </div>
-        <div class="form-group help">
-            <button type="submit" class="btn btn-default">Собрать</button>
-        </div>
-    </form>
-</div>
+    </div><!-- /.row -->
+</div><!-- /.container -->
 {% endblock %}
