--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -32,16 +32,21 @@
                         <option value="2" class="option-selected">Грузоперевозка (40р)</option>
                     </select>
                 </div>
-                <div class="form-group help">
-                    <input type="text" class="form-control" name="amount" id="amount" placeholder="Количество пассажиров">
-                    <select class="selectpicker form-control" name="auto" id="auto" style="visibility: hidden;">
-                        <option value="Микроавтобус" class="option-selected">Микроавтобус</option>
-                        <option value="Грузовик" class="option-selected">Грузовик</option>
-                        <option value="Фура" class="option-selected">Фура</option>
-                    </select>
-                </div>
-                <div class="form-group help">
-                    <button type="submit" class="btn btn-default">Заказать</button>
+                <div class="row">
+                    <div class="col-sm form-group help">
+                        <input type="text" class="form-control" name="amount" id="amount"
+                            placeholder="Кол-во пассажиров">
+                    </div>
+                    <div class="col-sm form-group help">
+                        <select class="selectpicker form-control" name="auto" id="auto" style="visibility: hidden;">
+                            <option value="Микроавтобус" class="option-selected">Микроавтобус</option>
+                            <option value="Грузовик" class="option-selected">Грузовик</option>
+                            <option value="Фура" class="option-selected">Фура</option>
+                        </select>
+                    </div>
+                    <div class="form-group help">
+                        <button type="submit" class="btn btn-default">Заказать</button>
+                    </div>
                 </div>
             </form>
         </div>
