--- a/app/templates/manage/delete_stop.html
+++ b/app/templates/manage/delete_stop.html
@@ -4,23 +4,16 @@
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="">
-                {{ form.hidden_tag() }}
                 <span class="heading">УДАЛИТЬ ОСТАНОВКУ</span>
-                <div class="form-group">
-                    {{ form.name.label(class="form-control-label") }}
-                    {% if form.name.errors %}
-                    {{ form.name(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.name.errors %}
-                        <span>{{ error }}</span>
+                <div class="form-group help">
+                    <select class="selectpicker form-control" name="stop">
+                        {% for stop in stops %}
+                        <option value="{{stop.name}}" class="option-selected">{{stop.name}}</option>
                         {% endfor %}
-                    </div>
-                    {% else %}
-                    {{ form.name(class="form-control form-control-lg") }}
-                    {% endif %}
+                    </select>
                 </div>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
+                <div class="form-group help">
+                    <button type="submit" class="btn btn-default">Удалить</button>
                 </div>
             </form>
         </div>
