--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,8 +22,12 @@
 
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
         body {
             background-color: #d8dfe2;
+            font-family: 'Roboto Mono', monospace;
+            font-size: 14px;
         }
     </style>
     <!-- Навигация -->
