--- a/app/templates/manage/manager_profile.html
+++ b/app/templates/manage/manager_profile.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <div class="card" style="width: 18rem;margin-top:6%">
+            <div class="card" style="width: 75%;margin-top:6%">
                 <div class="card-body">
                     <h5 class="card-title">Менеджер - {{ user.username }}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">{{ user.email }}</h6>
@@ -162,7 +162,7 @@
             <!-- День -->
             <p class="card-text">
             <div class="dropdown dropright">
-                <a class="btn btn-secondary dropdown-toggle" href="#" style="width: 50%;" role="button"
+                <a class="btn btn-secondary dropdown-toggle" href="#" style="width: 75%;" role="button"
                     id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Посмотреть день
                 </a>
@@ -176,7 +176,7 @@
             <!-- День -->
             <!-- Статус -->
             <div class="dropdown dropright">
-                <a class="btn btn-secondary dropdown-toggle" href="#" style="width: 50%;" role="button"
+                <a class="btn btn-secondary dropdown-toggle" href="#" style="width: 75%;" role="button"
                     id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Фильтр по статусу
                 </a>
